# dining-philosophers

./: Chandy-Misra  Chandy-Misra.c  Sequential.go  Tanenbaum.go  anotacoes.md
chandy-misra/: .gitignore  CMakeLists.txt  Graphics.cpp  Graphics.h  main  main.cpp
chandy-misra/include/: fork.h  philosopher.h  topic.h
chandy-misra/openmp/: philosophers_dinning.cpp
chandy-misra/src/: fork.cpp  main.cpp  philosopher.cpp  topic.cpp
